test: Add parameterized test for `FXMLReader` and handle new test resources
- Refactored `FXMLReaderTests` to include a parameterized test for in-memory scripts.
- Updated test resources to support parameterized testing (`InMemoryScript.fxml` and `InMemoryScriptCData.fxml`).
- Adjusted assertions and modified example FXML files to handle CDATA and comments.
- Removed redundant constructors and methods from `ParsedXMLStructure` and `ParsedFXML` for improved clarity and maintainability.
- Improved helper methods for child element parsing in `FXMLDocumentParser`.
- Replaced repeated text node checks with a constant set in `FXMLReader`.